using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Variables : MonoBehaviour
{
    #region KeyAnimatorPlayer
    public static string fallingKey = "isFalling";
    public static string movingKey = "isMoving";
    public static string jumpingKey = "jumping";
    #endregion
}
